Bug 1714282 - Handle bitmap font sizes in the shared font list on Linux. r=emilio, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D116874